--- a/index.html
+++ b/index.html
@@ -10,19 +10,19 @@
 </head>
 <body>
     <div class="page">
-        
-        <section class="edit">
+        <div class="edit edit_display_none">
             <div class="edit__content">
-                <h2 class="edit__content-title">Edit profile</h2>
-                <form class="form">
-                    <input class="form__input form__input_name" type="text" id="name" name="name" value="" placeholder="">
-                    <input class="form__input form__input_job" type="text" id="occupation" name="occupation" value="" placeholder="">
-                    <input class="form__button" type="submit" value="Save">
+                <button class="edit__content-close" type="button"></button>
+                <form class="form" name="edit_from">
+                    <fieldset class="form__info">
+                        <legend class="form__info-title">Edit Profile</legend>
+                        <input class="form__info-input form__info-input_type_name" required="required" type="text" id="name" name="name" value="" placeholder="">
+                        <input class="form__info-input form__info-input_type_job" required="required" type="text" id="occupation" name="occupation" value="" placeholder="">
+                        <input class="form__info-button" type="submit" value="Save">
+                    </fieldset>
                 </form>
             </div>
-            <button class="edit__close"></button>
-        </section>
-        <div class="page__none">
+        </div>
         <header class="header">
             <img src="./images/header_vector.svg" class="header__image" alt="Around the US">
         </header>
@@ -30,61 +30,60 @@
             <section class="profile">
                 <img src="./images/profile_image.jpg" class="profile__image" alt="profile image">
                 <div class="profile__info">
-                    <h2 class="profile__info-title">Jacques Cousteau</h2>
+                    <h1 class="profile__info-title">Jacques Cousteau</h1>
                     <button class="profile__info-button"></button>
-                    <p class="profile__info-subtitle"> Explorer</p>
+                    <p class="profile__info-subtitle">Explorer</p>
                 </div>
-                <button class="profile__button"></button>
+                <button class="profile__button" type="button"></button>
             </section>
             <section class="elements" id="elements">
-                <artice class="card">
+                <article class="card">
                     <img src="./images/yosemite_image.jpg" class="card__image" alt="some image">
                     <div class="card__info">
-                        <h3 class="card__info-title">Yosemite Valley</h3>
-                        <button class="card__info-button"></button>
+                        <h2 class="card__info-title">Yosemite Valley</h2>
+                        <button class="card__info-button" type="button"></button>
                     </div>
-                </artice>
-                <artice class="card">
+                </article>
+                <article class="card">
                     <img src="./images/louise_image.jpg" class="card__image" alt="some image">
                     <div class="card__info">
-                        <h3 class="card__info-title">Lake Louise</h3>
-                        <button class="card__info-button"></button>
+                        <h2 class="card__info-title">Lake Louise</h2>
+                        <button class="card__info-button" type="button"></button>
                     </div>
-                </artice>
-                <artice class="card">
+                </article>
+                <article class="card">
                     <img src="./images/bald-mountain_image.jpg" class="card__image" alt="some image">
                     <div class="card__info">
-                        <h3 class="card__info-title">Bald Mountains</h3>
-                        <button class="card__info-button"></button>
+                        <h2 class="card__info-title">Bald Mountains</h2>
+                        <button class="card__info-button" type="button"></button>
                     </div>
-                </artice>
-                <artice class="card">
+                </article>
+                <article class="card">
                     <img src="./images/latenar_image.jpg" class="card__image" alt="some image">
                     <div class="card__info">
-                        <h3 class="card__info-title">Latemar</h3>
-                        <button class="card__info-button"></button>
+                        <h2 class="card__info-title">Latemar</h2>
+                        <button class="card__info-button" type="button"></button>
                     </div>
-                </artice>
-                <artice class="card">
+                </article>
+                <article class="card">
                     <img src="./images/vanoise_image.jpg" class="card__image" alt="some image">
                     <div class="card__info">
-                        <h3 class="card__info-title">Vanoise National Park</h3>
-                        <button class="card__info-button"></button>
+                        <h2 class="card__info-title">Vanoise National Park</h2>
+                        <button class="card__info-button" type="button"></button>
                     </div>
-                </artice>
-                <artice class="card">
+                </article>
+                <article class="card">
                     <img src="./images/lago_image.jpg" class="card__image" alt="some image">
                     <div class="card__info">
-                        <h3 class="card__info-title">Lago di Braies</h3>
-                        <button class="card__info-button"></button>
+                        <h2 class="card__info-title">Lago di Braies</h2>
+                        <button class="card__info-button" type="button"></button>
                     </div>
-                </artice>
+                </article>
             </section>
         </main>
         <footer class="footer">
             <p class="footer__text">© 2021 Around The U.S.</p>
         </footer>
-        </div>
     </div>
     <script src="./scripts/edit_profile.js"></script>
 </body>
