--- a/index.html
+++ b/index.html
@@ -10,19 +10,6 @@
 </head>
 <body>
     <div class="page">
-        <div class="edit edit_disabled">
-            <div class="edit__content">
-                <button class="edit__content-close" type="button"></button>
-                <form class="form" name="edit_from">
-                    <fieldset class="form__info">
-                        <legend class="form__info-title">Edit Profile</legend>
-                        <input class="form__info-input form__info-input_type_name" required="required" type="text" id="name" name="name" value="" placeholder="Name">
-                        <input class="form__info-input form__info-input_type_job" required="required" type="text" id="occupation" name="occupation" value="" placeholder="Occupation">
-                        <input class="form__info-button" type="submit" value="Save">
-                    </fieldset>
-                </form>
-            </div>
-        </div>
         <header class="header">
             <img src="./images/header_vector.svg" class="header__image" alt="Around the US">
         </header>
@@ -37,55 +24,59 @@
                 <button class="profile__button" type="button"></button>
             </section>
             <section class="elements" id="elements">
-                <article class="card">
-                    <img src="./images/yosemite_image.jpg" class="card__image" alt="some image">
-                    <div class="card__info">
-                        <h2 class="card__info-title">Yosemite Valley</h2>
-                        <button class="card__info-button" type="button"></button>
-                    </div>
-                </article>
-                <article class="card">
-                    <img src="./images/louise_image.jpg" class="card__image" alt="some image">
-                    <div class="card__info">
-                        <h2 class="card__info-title">Lake Louise</h2>
-                        <button class="card__info-button" type="button"></button>
-                    </div>
-                </article>
-                <article class="card">
-                    <img src="./images/bald-mountain_image.jpg" class="card__image" alt="some image">
-                    <div class="card__info">
-                        <h2 class="card__info-title">Bald Mountains</h2>
-                        <button class="card__info-button" type="button"></button>
-                    </div>
-                </article>
-                <article class="card">
-                    <img src="./images/latenar_image.jpg" class="card__image" alt="some image">
-                    <div class="card__info">
-                        <h2 class="card__info-title">Latemar</h2>
-                        <button class="card__info-button" type="button"></button>
-                    </div>
-                </article>
-                <article class="card">
-                    <img src="./images/vanoise_image.jpg" class="card__image" alt="some image">
-                    <div class="card__info">
-                        <h2 class="card__info-title">Vanoise National Park</h2>
-                        <button class="card__info-button" type="button"></button>
-                    </div>
-                </article>
-                <article class="card">
-                    <img src="./images/lago_image.jpg" class="card__image" alt="some image">
-                    <div class="card__info">
-                        <h2 class="card__info-title">Lago di Braies</h2>
-                        <button class="card__info-button" type="button"></button>
-                    </div>
-                </article>
+                
             </section>
         </main>
         <footer class="footer">
             <p class="footer__text">© 2021 Around The U.S.</p>
         </footer>
     </div>
-    <script src="./scripts/edit_profile.js"></script>
+    <div class="popup popup_disabled">
+        <div class="popup__content">
+            <button class="popup__content-close" type="button"></button>
+            <form class="form" name="edit_form" id="edit_form">
+                <fieldset class="form__info">
+                    <legend class="form__info-title">Edit profile</legend>
+                    <input class="form__info-input form__info-input_type_name" required="required" type="text" id="name" name="name" value="" placeholder="Name">
+                    <input class="form__info-input form__info-input_type_job" required="required" type="text" id="occupation" name="occupation" value="" placeholder="Occupation">
+                    <input class="form__info-button" type="submit" value="Save">
+                </fieldset>
+            </form>
+        </div>
+    </div>
+    <div class="popup popup_disabled" id="popup_post">
+        <div class="popup__content">
+            <button class="popup__content-close" type="button" id="post_close"></button>
+            <form class="form" id="form_post" name="edit_form">
+                <fieldset class="form__info">
+                    <legend class="form__info-title">New Place</legend>
+                    <input class="form__info-input form__info-input_type_title" required="required" type="text" id="title" value="" placeholder="Title">
+                    <input class="form__info-input form__info-input_type_image" required="required" type="text" id="image" value="" placeholder="Image Link">
+                    <input class="form__info-button" id="post_submit" type="submit" value="Create">
+                </fieldset>
+            </form>
+        </div>
+    </div>
+
+    <div class="popup popup_type_preview popup_disabled">
+        <div class="popup__content_type_preview">
+            <button type="button" class="popup__content-close popup__content-close_type_preview"></button>
+            <img src="" alt="" class="popup__image">
+            <h3 class="popup__title"></h3>
+        </div>
+    </div>
+
+    <template id="card-template">
+        <article class="card">
+            <button class="card__trash" type="button"></button>
+            <img src="" class="card__image" alt="some image">
+            <div class="card__info">
+                <h2 class="card__info-title"></h2>
+                <button class="card__info-button" type="button"></button>
+            </div>
+        </article>
+    </template>
+    <script src="./scripts/index.js"></script>
 </body>
 
 </html>
