--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         </footer>
     </div>
     <div class="popup popup_disabled">
-        <div class="popup__content">
+        <div class="popup__content popup__content_type_form">
             <button class="popup__content-close" type="button"></button>
             <form class="form" name="edit_form" id="edit_form">
                 <fieldset class="form__info">
@@ -45,7 +45,7 @@
         </div>
     </div>
     <div class="popup popup_disabled" id="popup_post">
-        <div class="popup__content">
+        <div class="popup__content popup__content_type_form">
             <button class="popup__content-close" type="button" id="post_close"></button>
             <form class="form" id="form_post" name="edit_form">
                 <fieldset class="form__info">
@@ -59,7 +59,7 @@
     </div>
 
     <div class="popup popup_type_preview popup_disabled">
-        <div class="popup__content_preview">
+        <div class="popup__content popup__content_type_preview">
             <button type="button" class="popup__content-close popup__content-close_type_preview"></button>
             <img src=" " alt="" class="popup__image">
             <h3 class="popup__title"></h3>
