--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <p class="footer__text">© 2021 Around The U.S.</p>
         </footer>
     </div>
-    <div class="popup popup_disabled" id="edit_popup">
+    <div class="popup" id="edit_popup">
         <div class="popup__content popup__content_type_form">
             <button class="popup__content-close" type="button"></button>
             <form class="form" name="edit_form" id="edit_form">
@@ -46,7 +46,7 @@
             </form>
         </div>
     </div>
-    <div class="popup popup_disabled" id="popup_post">
+    <div class="popup" id="popup_post">
         <div class="popup__content popup__content_type_form">
             <button class="popup__content-close" type="button" id="post_close"></button>
             <form class="form" id="form_post" name="edit_form">
@@ -62,7 +62,7 @@
         </div>
     </div>
 
-    <div class="popup popup_type_preview popup_disabled">
+    <div class="popup popup_type_preview">
         <div class="popup__content popup__content_type_preview">
             <button type="button" class="popup__content-close popup__content-close_type_preview"></button>
             <img src=" " alt="" class="popup__image">
